--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header class="navbar">
       <div class="container">
         <a href="#hero" class="logo-link">
-          <img src="image/logo-HSIB.png" alt="Logo HSI Berbagi" class="logo" />
+          <img src="/logo-HSIB.png" alt="Logo HSI Berbagi" class="logo" />
           HSI Berbagi
         </a>
         <nav class="nav-menu" id="navMenu">
@@ -488,6 +488,7 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
