--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="container">
         <a href="#hero" class="logo-link">
           <img src="/logo-HSIB.png" alt="Logo HSI Berbagi" class="logo" />
-          HSI Berbagi
+          HSI BERBAGI
         </a>
         <nav class="nav-menu" id="navMenu">
           <a href="#hero">Beranda</a>
@@ -488,6 +488,7 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
