--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
+      rel="stylesheet"
+    />
 
     <link
       rel="stylesheet"
@@ -30,7 +36,7 @@
     <header class="navbar">
       <div class="container">
         <a href="#hero" class="logo-link">
-          <img src="/logo-HSIB.png" alt="Logo HSI Berbagi" class="logo" />
+          <img src="/image/logo-HSIB.png" alt="Logo HSI Berbagi" class="logo" />
           HSI Berbagi
         </a>
         <nav class="nav-menu" id="navMenu">
@@ -39,7 +45,6 @@
           <a href="#keutamaan">Keutamaan</a>
           <a href="#donasi">Donasi</a>
           <a href="#galeri">Galeri</a>
-          <a href="#faq">FAQ</a>
           <a href="#donasi" class="btn-primary btn-donasi-nav">Yuk Berbagi</a>
         </nav>
         <div class="menu-toggle" id="menuToggle">
@@ -51,9 +56,10 @@
     <section id="hero" class="hero-section">
       <div class="container">
         <div class="hero-content" data-aos="fade-up">
+          <h1>Sambut Ramadhan Penuh Berkah, Jadikan Ramadhan Ini</h1>
           <h1>
-            Sambut Ramadhan Penuh Berkah, Jadikan Ramadhan Ini
-            <span style="color: #d67d3e">#RamadhanTerbaik</span>
+            <span style="color: #d67d3e">Ramadhan</span>
+            <span style="color: #d67d3e">Terbaik</span>
           </h1>
           <p>
             Bersama HSI Berbagi, Jadikan Bulan Ramadhan Lebih Bermakna dengan
@@ -153,22 +159,6 @@
               Al-Albani)
             </p>
           </blockquote>
-
-          <ul class="list-disc list-inside space-y-3 mt-10 text-left">
-            <li data-aos="fade-right" data-aos-delay="100">
-              Setiap kebaikan dilipatgandakan pahalanya secara khusus.
-            </li>
-            <li data-aos="fade-right" data-aos-delay="200">
-              Sarana menghapus dosa-dosa dan meraih ampunan Allah ﷻ.
-            </li>
-            <li data-aos="fade-right" data-aos-delay="300">
-              Mendekatkan diri pada kesempatan meraih malam Lailatul Qadar.
-            </li>
-            <li data-aos="fade-right" data-aos-delay="400">
-              Menjadi bagian dari sunnah Rasulullah ﷺ yang sangat dermawan di
-              bulan ini.
-            </li>
-          </ul>
         </div>
       </div>
     </section>
@@ -179,7 +169,7 @@
           Jadikan Ramadhan Terbaikmu Semakin Nyata dengan Berbagi Kebaikan di
           Bulan Mulia
         </h2>
-        <p data-aos="fade-up">
+        <p class="text-center" data-aos="fade-up">
           Mari capai target kebaikan bersama. Setiap kontribusi sangat berarti!
         </p>
 
@@ -224,11 +214,6 @@
         <h2 class="section-title" data-aos="fade-down">
           Ramadhan Tahun Lalu Begitu Bermakna
         </h2>
-        <p class="description text-center" data-aos="fade-up">
-          Kisah-kisah inspiratif dari Ramadhan tahun lalu, berkat kedermawanan
-          Anda.
-        </p>
-
         <div
           class="testimonial-carousel"
           id="testimonial-carousel"
@@ -394,52 +379,6 @@
       <div class="modal-content"></div>
     </div>
 
-    <section id="faq" class="faq-section section-padding">
-      <div class="container">
-        <h2 class="section-title" data-aos="fade-down">
-          Pertanyaan yang Sering Diajukan (FAQ)
-        </h2>
-        <div class="faq-list">
-          <div class="faq-item" data-aos="fade-up" data-aos-delay="100">
-            <button class="faq-question">
-              Bagaimana cara memastikan donasi saya sampai ke penerima manfaat?
-              <i class="fas fa-chevron-down"></i>
-            </button>
-            <div class="faq-answer">
-              <p>
-                HSI Berbagi memiliki mekanisme penyaluran yang transparan dan
-                akuntabel, didukung oleh tim relawan di berbagai wilayah.
-                Dokumentasi penyaluran akan diunggah di galeri kami.
-              </p>
-            </div>
-          </div>
-          <div class="faq-item" data-aos="fade-up" data-aos-delay="200">
-            <button class="faq-question">
-              Apakah HSI Berbagi legal? <i class="fas fa-chevron-down"></i>
-            </button>
-            <div class="faq-answer">
-              <p>
-                Ya, HSI Berbagi beroperasi secara sah berdasarkan hukum di
-                Indonesia di bawah Yayasan Halaqah Silsilah Ilmiyyah (HSI)
-                AbdullahRoy.
-              </p>
-            </div>
-          </div>
-          <div class="faq-item" data-aos="fade-up" data-aos-delay="300">
-            <button class="faq-question">
-              Berapa minimal donasi? <i class="fas fa-chevron-down"></i>
-            </button>
-            <div class="faq-answer">
-              <p>
-                Tidak ada batasan minimal donasi. Berapapun jumlahnya,
-                insyaAllah akan menjadi kebaikan yang diterima di sisi Allah ﷻ.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <button id="backToTopBtn" title="Kembali ke Atas" class="back-to-top">
       <i class="fas fa-chevron-up"></i>
     </button>
@@ -462,7 +401,6 @@
               <li><a href="#program">Program</a></li>
               <li><a href="#donasi">Cara Donasi</a></li>
               <li><a href="#galeri">Dokumentasi</a></li>
-              <li><a href="#faq">FAQ</a></li>
             </ul>
           </div>
 
@@ -488,7 +426,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-
-
-
-
