--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <header class="navbar">
       <div class="container">
         <a href="#hero" class="logo-link">
-          <img src="/logo-HSIB.png" alt="Logo HSI Berbagi" class="logo" />
+          <img src="/image/logo-HSIB.png" alt="Logo HSI Berbagi" class="logo" />
           HSI Berbagi
         </a>
         <nav class="nav-menu" id="navMenu">
@@ -209,62 +209,6 @@
       </div>
     </section>
 
-    <section id="penerima" class="penerima-section section-padding">
-      <div class="container">
-        <h2 class="section-title" data-aos="fade-down">
-          Ramadhan Tahun Lalu Begitu Bermakna
-        </h2>
-        <div
-          class="testimonial-carousel"
-          id="testimonial-carousel"
-          data-aos="fade-up"
-          data-aos-delay="300"
-        >
-          <div class="testimonial-item active">
-            <p>
-              "Alhamdulillah, bantuan Ifthor ini sangat membantu santri kami.
-              Mereka jadi lebih semangat menghafal. Semoga Allah membalas
-              kebaikan para donatur HSI Berbagi."
-            </p>
-            <cite>- Ustadz Ahmad, Pengurus Ma'had Tahfidz (Jawa Timur)</cite>
-          </div>
-          <div class="testimonial-item">
-            <p>
-              "Saat Ramadhan, saya kesulitan mencari nafkah. Bantuan Sembako ini
-              benar-benar meringankan beban kami sekeluarga. Terima kasih
-              banyak!"
-            </p>
-            <cite>- Ibu Fatimah, Penerima Manfaat BPS (Sumatera Utara)</cite>
-          </div>
-          <div class="testimonial-item">
-            <p>
-              "Kami sangat bersyukur atas penyaluran Fidyah yang kami terima.
-              Ini menjadi berkah bagi kami yang sangat membutuhkan di bulan
-              penuh berkah ini."
-            </p>
-            <cite>- Bapak Saleh, Dhuafa Lansia (DKI Jakarta)</cite>
-          </div>
-          <div class="testimonial-item">
-            <p>
-              "Jazakumullahu khairan kepada seluruh muhsinin. Kebahagiaan mereka
-              saat berbuka adalah kebahagiaan kami juga. Semoga ini menjadi
-              pemberat timbangan amal."
-            </p>
-            <cite>- Relawan HSI Berbagi (Kalimantan Tengah)</cite>
-          </div>
-        </div>
-
-        <div class="carousel-nav" data-aos="fade-up" data-aos-delay="500">
-          <button class="prev-btn" aria-label="Previous Testimonial">
-            <i class="fas fa-chevron-left"></i>
-          </button>
-          <button class="next-btn" aria-label="Next Testimonial">
-            <i class="fas fa-chevron-right"></i>
-          </button>
-        </div>
-      </div>
-    </section>
-
     <section id="galeri" class="galeri-section section-padding bg-light">
       <div class="container">
         <h2 class="section-title" data-aos="fade-down">
@@ -278,59 +222,35 @@
         <div class="carousel-wrapper" data-aos="fade-up" data-aos-delay="200">
           <div class="carousel-track" id="photoCarouselTrack">
             <div class="carousel-slide">
-              <img
-                src="img/ramadhan-galeri-1.jpg"
-                alt="Penyaluran Paket Ifthar (BIRR)"
-              />
+              <img src="image/doc-7.jpg" alt="Penyaluran Paket Ifthar (BIRR)" />
               <div class="slide-caption">Penyaluran Paket Ifthar (BIRR)</div>
             </div>
             <div class="carousel-slide">
-              <img
-                src="img/ramadhan-galeri-2.jpg"
-                alt="Pembagian Paket Sembako (BPS)"
-              />
+              <img src="image/doc-6.jpg" alt="Pembagian Paket Sembako (BPS)" />
               <div class="slide-caption">Pembagian Paket Sembako (BPS)</div>
             </div>
             <div class="carousel-slide">
-              <img
-                src="img/ramadhan-galeri-3.jpg"
-                alt="Bantuan Tunai Ramadhan (BTR)"
-              />
+              <img src="image/doc-2.jpg" alt="Bantuan Tunai Ramadhan (BTR)" />
               <div class="slide-caption">Bantuan Tunai Ramadhan (BTR)</div>
             </div>
             <div class="carousel-slide">
-              <img
-                src="img/ramadhan-galeri-4.jpg"
-                alt="Penyaluran Zakat Fitrah"
-              />
+              <img src="image/doc-1.jpg" alt="Penyaluran Zakat Fitrah" />
               <div class="slide-caption">Penyaluran Zakat Fitrah</div>
             </div>
             <div class="carousel-slide">
-              <img
-                src="img/ramadhan-galeri-5.jpg"
-                alt="Ifthor Bersama Mualaf"
-              />
+              <img src="image/doc-3.jpg" alt="Ifthor Bersama Mualaf" />
               <div class="slide-caption">Ifthor Bersama Mualaf</div>
             </div>
-            <div class="carousel-slide">
-              <img
-                src="img/ramadhan-galeri-6.jpg"
-                alt="Penyaluran Fidyah Makanan"
-              />
+            <!-- <div class="carousel-slide">
+              <img src="image/doc-7.jpg" alt="Penyaluran Fidyah Makanan" />
               <div class="slide-caption">Penyaluran Fidyah Makanan</div>
-            </div>
+            </div> -->
             <div class="carousel-slide">
-              <img
-                src="img/ramadhan-galeri-7.jpg"
-                alt="Kegiatan I'tikaf di Masjid"
-              />
+              <img src="image/doc-4.jpg" alt="Kegiatan I'tikaf di Masjid" />
               <div class="slide-caption">Kegiatan I'tikaf di Masjid</div>
             </div>
             <div class="carousel-slide">
-              <img
-                src="img/ramadhan-galeri-8.jpg"
-                alt="Penyaluran di Pelosok Desa"
-              />
+              <img src="image/doc-5.jpg" alt="Penyaluran di Pelosok Desa" />
               <div class="slide-caption">Penyaluran di Pelosok Desa</div>
             </div>
           </div>
@@ -426,4 +346,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-
