--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <header class="navbar">
       <div class="container">
         <a href="#hero" class="logo-link">
-          <img src="/image/logo-HSIB.png" alt="Logo HSI Berbagi" class="logo" />
+          <img src="/logo-HSIB.png" alt="Logo HSI Berbagi" class="logo" />
           HSI Berbagi
         </a>
         <nav class="nav-menu" id="navMenu">
@@ -222,35 +222,35 @@
         <div class="carousel-wrapper" data-aos="fade-up" data-aos-delay="200">
           <div class="carousel-track" id="photoCarouselTrack">
             <div class="carousel-slide">
-              <img src="image/doc-7.jpg" alt="Penyaluran Paket Ifthar (BIRR)" />
+              <img src="/doc-7.jpg" alt="Penyaluran Paket Ifthar (BIRR)" />
               <div class="slide-caption">Penyaluran Paket Ifthar (BIRR)</div>
             </div>
             <div class="carousel-slide">
-              <img src="image/doc-6.jpg" alt="Pembagian Paket Sembako (BPS)" />
+              <img src="/doc-6.jpg" alt="Pembagian Paket Sembako (BPS)" />
               <div class="slide-caption">Pembagian Paket Sembako (BPS)</div>
             </div>
             <div class="carousel-slide">
-              <img src="image/doc-2.jpg" alt="Bantuan Tunai Ramadhan (BTR)" />
+              <img src="/doc-2.jpg" alt="Bantuan Tunai Ramadhan (BTR)" />
               <div class="slide-caption">Bantuan Tunai Ramadhan (BTR)</div>
             </div>
             <div class="carousel-slide">
-              <img src="image/doc-1.jpg" alt="Penyaluran Zakat Fitrah" />
+              <img src="/doc-1.jpg" alt="Penyaluran Zakat Fitrah" />
               <div class="slide-caption">Penyaluran Zakat Fitrah</div>
             </div>
             <div class="carousel-slide">
-              <img src="image/doc-3.jpg" alt="Ifthor Bersama Mualaf" />
+              <img src="/doc-3.jpg" alt="Ifthor Bersama Mualaf" />
               <div class="slide-caption">Ifthor Bersama Mualaf</div>
             </div>
             <!-- <div class="carousel-slide">
-              <img src="image/doc-7.jpg" alt="Penyaluran Fidyah Makanan" />
+              <img src="//doc-7.jpg" alt="Penyaluran Fidyah Makanan" />
               <div class="slide-caption">Penyaluran Fidyah Makanan</div>
             </div> -->
             <div class="carousel-slide">
-              <img src="image/doc-4.jpg" alt="Kegiatan I'tikaf di Masjid" />
+              <img src="/doc-4.jpg" alt="Kegiatan I'tikaf di Masjid" />
               <div class="slide-caption">Kegiatan I'tikaf di Masjid</div>
             </div>
             <div class="carousel-slide">
-              <img src="image/doc-5.jpg" alt="Penyaluran di Pelosok Desa" />
+              <img src="/doc-5.jpg" alt="Penyaluran di Pelosok Desa" />
               <div class="slide-caption">Penyaluran di Pelosok Desa</div>
             </div>
           </div>
@@ -346,3 +346,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
